# EngineCore

./: .clang-tidy  CMakeLists.txt  README.md
Application/: CMakeLists.txt  MyTestClass.cpp  MyTestClass.h  main.cpp
CompilerExtensions/: CMakeLists.txt  Class.h  CodeGenerator.h  EngineHeaderTool.cpp  Parser.cpp  Parser.h  play.cpp  play.h  temp.cpp
CompilerExtensions/CodeGen/: CMakeLists.txt
CompilerPlugin/: CMakeLists.txt  TestPlugin.cpp
Core/Net/Private/: Network.cpp
Core/Net/Public/: Network.h
Core/Reflect/Private/: MetaType.cpp
Core/Reflect/Public/: MetaType.h
Core/Util/Private/: Log.cpp
Core/Util/Public/: InitOnce.h  Log.h
Runtime/: CMakeLists.txt
Runtime/UObject/: CMakeLists.txt
Runtime/UObject/Private/: Class.cpp
Runtime/UObject/Public/: Object.h  ObjectMacros.h
Test/: MainTest.cpp
Util/: CMakeLists.txt
Util/Public/: InitOnce.h  Log.h  ResourceID.h  XXH64.h
